--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -19,8 +19,7 @@
     "from src.metrics import corr\n",
     "from nilearn.glm import fdr_threshold\n",
     "from scipy.stats import ttest_1samp, norm\n",
-    "import pandas as pd\n",
-    "import plotly.express as px"
+    "import pandas as pd"
    ]
   },
   {
@@ -47,7 +46,7 @@
    "outputs": [],
    "source": [
     "def average(run):\n",
-    "    layout = BIDSLayout(\"data/li/derivatives\", validate=False, is_derivative=True)\n",
+    "    layout = BIDSLayout(\"data/li2022/derivatives\", validate=False, is_derivative=True)\n",
     "    subjects = [s for s in layout.get_subjects() if s.startswith(lang)]\n",
     "    a = None\n",
     "    affine = None\n",
@@ -61,8 +60,8 @@
     "        else:\n",
     "            a += img.get_fdata()\n",
     "        img = layout.get(subject=subject)[0]\n",
-    "        new_path = img.path.replace(\"sub-\"+subject, \"mean\"+lang)\n",
-    "        new_path = new_path.replace(f\"run-{img.entities[\"run\"]}\", f\"run-{run+1:02d}\")\n",
+    "        new_path = img.path.replace(\"sub-\"+subject, \"sub-mean\"+lang)\n",
+    "        new_path = new_path.replace(f\"run-{img.entities['run']}\", f\"run-{run+1:02d}\")\n",
     "    a /= len(subjects)\n",
     "    Path(new_path).parent.mkdir(parents=True, exist_ok=True)\n",
     "    nib.Nifti1Image(a, affine).to_filename(new_path)\n",
@@ -114,7 +113,7 @@
    "outputs": [],
    "source": [
     "def read(path):\n",
-    "    return path, nib.load(path).slicer[40:50, 40:55, 35:65].get_fdata()"
+    "    return path, nib.load(path).get_fdata()"
    ]
   },
   {
@@ -163,7 +162,9 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(signif, index=[\"x\", \"y\", \"z\"]).T\n",
-    "df[\"zscore\"] = zscores[signif]"
+    "df[\"zscore\"] = zscores[signif]\n",
+    "df.to_csv(\"data/li2022/ICS_voxels_EN.csv\", index=False)\n",
+    "np.save(\"data/li2022/ICS_voxels_EN.npy\", {\"pval\": pvalues, \"zscore\": zscores, \"thresh\": thresh, \"signif\": signif})"
    ]
   },
   {
@@ -172,28 +173,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for subject in tqdm(subjects):\n",
+    "    imgs = sorted([f.path for f in layout.get(subject=subject)])\n",
+    "    assert len(imgs) == n_runs\n",
+    "    for img_file in imgs:\n",
+    "        img = nib.load(img_file)\n",
+    "        img = nib.Nifti1Image(img.get_fdata()[signif], img.affine)\n",
+    "        new_img_file = img_file.replace(\"sub-\"+subject, \"sub-\"+subject+\"ISC\")\n",
+    "        Path(new_img_file).parent.mkdir(parents=True, exist_ok=True)\n",
+    "        img.to_filename(new_img_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl\n",
+    "from nilearn import plotting\n",
     "import os\n",
-    "os.makedirs(\"figs\", exist_ok=True)\n",
-    "px.scatter_3d(df, x=\"x\", y=\"y\", z=\"z\", color=\"zscore\", color_continuous_midpoint=0, opacity=.85).write_html(\"figs/li2022_ics.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nilearn import plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl"
+    "os.makedirs(\"figs\", exist_ok=True)"
    ]
   },
   {
@@ -215,17 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotting.view_connectome(adjacency_matrix=np.diag(df.zscore), node_coords=df[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap) #node_color=cmap(norm(df.zscore)))\n",
-    "#.save_as_html(\"figs/li2022_ics.html\")"
+    "plotting.view_connectome(adjacency_matrix=np.diag(df.zscore), node_coords=df[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap).save_as_html(\"figs/li2022_ics.html\")"
    ]
   }
  ],
@@ -245,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
