--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -91,7 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lang = \"EN\""
+    "lang = \"EN\"\n",
+    "n_runs = 9"
    ]
   },
   {
@@ -145,6 +146,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isc = np.load(\"data/li2022/ISC_voxels_EN.npy\", allow_pickle=True).item()\n",
+    "zscores = isc[\"zscore\"]\n",
+    "signif = isc[\"signif\"]\n",
+    "df = pd.read_csv(f\"data/li2022/ISC_voxels_{lang}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(signif, index=[\"x\", \"y\", \"z\"]).T\n",
+    "df[\"zscore\"] = zscores[signif]\n",
+    "df.to_csv(f\"data/li2022/ISC_voxels_{lang}.csv\", index=False)\n",
+    "np.save(f\"data/li2022/ISC_voxels_{lang}.npy\", {\"pval\": pvalues, \"zscore\": zscores, \"thresh\": thresh, \"signif\": signif})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -157,36 +182,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(signif, index=[\"x\", \"y\", \"z\"]).T\n",
-    "df[\"zscore\"] = zscores[signif]\n",
-    "df.to_csv(\"data/li2022/ICS_voxels_EN.csv\", index=False)\n",
-    "np.save(\"data/li2022/ICS_voxels_EN.npy\", {\"pval\": pvalues, \"zscore\": zscores, \"thresh\": thresh, \"signif\": signif})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/49 [00:08<?, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "for subject in tqdm(subjects):\n",
     "    imgs = sorted([f.path for f in layout.get(subject=subject)])\n",
     "    assert len(imgs) == n_runs\n",
     "    for img_file in imgs:\n",
-    "        img = nib.load(img_file)\n",
-    "        img = nib.Nifti1Image(img.get_fdata()[signif], img.affine)\n",
+    "        img = nib.load(img_file).get_fdata()[signif].T\n",
     "        new_img_file = img_file.replace(\"sub-\"+subject, \"sub-\"+subject+\"ISC\")\n",
+    "        new_img_file = new_img_file.replace(\".nii.gz\", \".npz\")\n",
     "        Path(new_img_file).parent.mkdir(parents=True, exist_ok=True)\n",
-    "        img.to_filename(new_img_file)"
+    "        np.savez_compressed(new_img_file, img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotting.view_connectome(adjacency_matrix=np.diag(df.zscore), node_coords=df[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap).save_as_html(\"figs/li2022_ics.html\")"
+    "plotting.view_connectome(adjacency_matrix=np.diag(df.zscore), node_coords=df[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap).save_as_html(\"figs/li2022_isc.html\")"
    ]
   }
  ],
