--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -19,7 +19,12 @@
     "from src.metrics import corr\n",
     "from nilearn.glm import fdr_threshold\n",
     "from scipy.stats import ttest_1samp, norm\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib as mpl\n",
+    "from nilearn import plotting, image\n",
+    "import os\n",
+    "\n",
+    "os.makedirs(\"figs\", exist_ok=True)"
    ]
   },
   {
@@ -97,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,30 +151,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "isc = np.load(\"data/li2022/ISC_voxels_EN.npy\", allow_pickle=True).item()\n",
-    "zscores = isc[\"zscore\"]\n",
-    "signif = isc[\"signif\"]\n",
-    "df = pd.read_csv(f\"data/li2022/ISC_voxels_{lang}.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(signif, index=[\"x\", \"y\", \"z\"]).T\n",
-    "df[\"zscore\"] = zscores[signif]\n",
-    "df.to_csv(f\"data/li2022/ISC_voxels_{lang}.csv\", index=False)\n",
-    "np.save(f\"data/li2022/ISC_voxels_{lang}.npy\", {\"pval\": pvalues, \"zscore\": zscores, \"thresh\": thresh, \"signif\": signif})"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -182,17 +163,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/49 [00:08<?, ?it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "affine = nib.load(layout.get()[0]).affine\n",
+    "df = pd.DataFrame(image.coord_transform(*signif, affine), index=[\"x\", \"y\", \"z\"]).T\n",
+    "df[\"zscore\"] = zscores[signif]\n",
+    "df.to_csv(f\"data/li2022/ISC_voxels_{lang}.csv\", index=False)\n",
+    "np.save(f\"data/li2022/ISC_voxels_{lang}.npy\", {\"pval\": pvalues, \"zscore\": zscores, \"thresh\": thresh, \"signif\": signif})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isc = np.load(\"data/li2022/ISC_voxels_EN.npy\", allow_pickle=True).item()\n",
+    "zscores = isc[\"zscore\"]\n",
+    "signif = isc[\"signif\"]\n",
+    "thresh = isc[\"thresh\"]\n",
+    "df = pd.read_csv(f\"data/li2022/ISC_voxels_{lang}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for subject in tqdm(subjects):\n",
     "    imgs = sorted([f.path for f in layout.get(subject=subject)])\n",
@@ -207,36 +206,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib as mpl\n",
-    "from nilearn import plotting\n",
-    "import os\n",
-    "os.makedirs(\"figs\", exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "cmap = mpl.cm.jet\n",
-    "max_zscore = df.zscore.abs().max()\n",
-    "norm = mpl.colors.Normalize(vmin=-max_zscore, vmax=max_zscore)\n",
+    "max_zscore = df.zscore.max()\n",
+    "norm = mpl.colors.Normalize(vmin=0, vmax=max_zscore)\n",
     "cbar = mpl.cm.ScalarMappable(norm=norm, cmap=cmap)\n",
-    "colors = cmap(norm(df.zscore))"
+    "colors = cmap(norm(df.zscore))\n",
+    "sizes = df.zscore ** 2\n",
+    "sizes = 10 * sizes / sizes.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotting.view_connectome(adjacency_matrix=np.diag(df.zscore), node_coords=df[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap).save_as_html(\"figs/li2022_isc.html\")"
+    "plotting.view_connectome(adjacency_matrix=np.diag(df.zscore), node_coords=df[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap, node_size=sizes, symmetric_cmap=False, title=f\"Correlation zscore from ISC on the {n_subjects} {lang} subjects (zscore thresh {thresh:.3g})\").save_as_html(\"figs/li2022_isc.html\")"
    ]
   }
  ],
