--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,15 +193,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for subject in tqdm(subjects):\n",
-    "    imgs = sorted([f.path for f in layout.get(subject=subject)])\n",
-    "    assert len(imgs) == n_runs\n",
-    "    for img_file in imgs:\n",
-    "        img = nib.load(img_file).get_fdata()[signif].T\n",
-    "        new_img_file = img_file.replace(\"sub-\"+subject, \"sub-\"+subject+\"ISC\")\n",
-    "        new_img_file = new_img_file.replace(\".nii.gz\", \".npz\")\n",
-    "        Path(new_img_file).parent.mkdir(parents=True, exist_ok=True)\n",
-    "        np.savez_compressed(new_img_file, img)"
+    "new_img_file.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tqdm(total=n_subjects * n_runs) as pbar:\n",
+    "    for subject in subjects:\n",
+    "        imgs = sorted([f.path for f in layout.get(subject=subject)])\n",
+    "        assert len(imgs) == n_runs\n",
+    "        for img_file in imgs:\n",
+    "            new_img_file = img_file.replace(\"sub-\"+subject, \"sub-\"+subject+\"ISC\")\n",
+    "            new_img_file = Path(new_img_file.replace(\".nii.gz\", \".npz\"))\n",
+    "            if new_img_file.exists():\n",
+    "                pbar.update(1)\n",
+    "                continue\n",
+    "            new_img_file.parent.mkdir(parents=True, exist_ok=True)\n",
+    "            img = nib.load(img_file).get_fdata()[signif].T\n",
+    "            np.savez_compressed(new_img_file, img)\n",
+    "            pbar.update(1)"
    ]
   },
   {
@@ -211,21 +225,22 @@
    "outputs": [],
    "source": [
     "cmap = mpl.cm.jet\n",
-    "max_zscore = df.zscore.max()\n",
+    "df_display = df.sample(len(df) // 10)\n",
+    "max_zscore = df_display.zscore.max()\n",
     "norm = mpl.colors.Normalize(vmin=0, vmax=max_zscore)\n",
     "cbar = mpl.cm.ScalarMappable(norm=norm, cmap=cmap)\n",
-    "colors = cmap(norm(df.zscore))\n",
-    "sizes = df.zscore ** 2\n",
+    "colors = cmap(norm(df_display.zscore))\n",
+    "sizes = df_display.zscore ** 2\n",
     "sizes = 10 * sizes / sizes.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotting.view_connectome(adjacency_matrix=np.diag(df.zscore), node_coords=df[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap, node_size=sizes, symmetric_cmap=False, title=f\"Correlation zscore from ISC on the {n_subjects} {lang} subjects (zscore thresh {thresh:.3g})\").save_as_html(\"figs/li2022_isc.html\")"
+    "plotting.view_connectome(adjacency_matrix=np.diag(df_display.zscore), node_coords=df_display[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap, node_size=sizes, symmetric_cmap=False, title=f\"Correlation zscore from ISC on the {n_subjects} {lang} subjects, zscore FDR thresh {thresh:.3g}, 10% of the {len(df)} selected voxels are displayed\").save_as_html(\"figs/li2022_isc.html\")"
    ]
   }
  ],
