--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -193,17 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_img_file.exists()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with tqdm(total=n_subjects * n_runs) as pbar:\n",
-    "    for subject in subjects:\n",
+    "    for subject in subjects + [f\"mean{lang}\"]:\n",
     "        imgs = sorted([f.path for f in layout.get(subject=subject)])\n",
     "        assert len(imgs) == n_runs\n",
     "        for img_file in imgs:\n",
