--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "from nilearn import plotting, image\n",
-    "import os\n",
+    "import os, h5py\n",
     "\n",
     "os.makedirs(\"figs\", exist_ok=True)"
    ]
@@ -108,7 +108,7 @@
    "source": [
     "layout = BIDSLayout(\"data/li2022/derivatives\", validate=False, is_derivative=True)\n",
     "subjects = layout.get_subjects()\n",
-    "subjects = [s for s in subjects if s.startswith(lang)]\n",
+    "subjects = [s for s in subjects if s.startswith(lang) and not \"ISC\" in s]\n",
     "n_subjects = len(subjects)"
    ]
   },
@@ -199,13 +199,14 @@
     "        assert len(imgs) == n_runs\n",
     "        for img_file in imgs:\n",
     "            new_img_file = img_file.replace(\"sub-\"+subject, \"sub-\"+subject+\"ISC\")\n",
-    "            new_img_file = Path(new_img_file.replace(\".nii.gz\", \".npz\"))\n",
+    "            new_img_file = Path(new_img_file.replace(\".nii.gz\", \".hf5\"))\n",
     "            if new_img_file.exists():\n",
     "                pbar.update(1)\n",
     "                continue\n",
     "            new_img_file.parent.mkdir(parents=True, exist_ok=True)\n",
     "            img = nib.load(img_file).get_fdata()[signif].T\n",
-    "            np.savez_compressed(new_img_file, img)\n",
+    "            with h5py.File(new_img_file, \"w\") as f:\n",
+    "                f.create_dataset(\"data\", data=img, compression=\"gzip\")\n",
     "            pbar.update(1)"
    ]
   },
@@ -251,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
