--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tqdm(total=n_subjects * n_runs) as pbar:\n",
+    "with tqdm(total=(n_subjects + 1) * n_runs) as pbar:\n",
     "    for subject in subjects + [f\"mean{lang}\"]:\n",
     "        imgs = sorted([f.path for f in layout.get(subject=subject)])\n",
     "        assert len(imgs) == n_runs\n",
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
