Li2022 keep brain

--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -17,14 +17,22 @@
     "import nibabel as nib\n",
     "import numpy as np\n",
     "from src.metrics import corr\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from nilearn.glm import fdr_threshold\n",
     "from scipy.stats import ttest_1samp, norm\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "from nilearn import plotting, image\n",
     "import os, h5py\n",
-    "\n",
-    "os.makedirs(\"figs\", exist_ok=True)"
+    "from joblib import Parallel, delayed\n",
+    "import re\n",
+    "os.makedirs(\"figs\", exist_ok=True)\n",
+    "lang = \"EN\"\n",
+    "n_runs = 9\n",
+    "layout = BIDSLayout(\"data/li2022/derivatives\", validate=False, is_derivative=True)\n",
+    "subjects = layout.get_subjects()\n",
+    "subjects = [s for s in subjects if re.match(lang+r\"\\d+$\", s)]\n",
+    "n_subjects = len(subjects)"
    ]
   },
   {
@@ -32,16 +40,6 @@
    "metadata": {},
    "source": [
     "# Build mean EN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lang = \"EN\"\n",
-    "n_runs = 9"
    ]
   },
   {
@@ -87,29 +85,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Keep only brain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = nib.load(\"data/li2022/colin27_t1_tal_lin_mask.nii\")\n",
+    "mask = image.resample_to_img(mask, nib.load(layout.get()[0]), interpolation=\"nearest\").get_fdata().astype(bool)\n",
+    "mask = np.where(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def slice_brain(subject, path):\n",
+    "    new_path = path.replace(\"sub-\" + subject, \"sub-\" + subject + \"brain\")\n",
+    "    new_path = Path(new_path.replace(\".nii.gz\", \".hf5\"))\n",
+    "    if new_path.exists():\n",
+    "        return\n",
+    "    new_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    with h5py.File(new_path, \"w\") as f:\n",
+    "        f.create_dataset(\"data\", data=nib.load(path).get_fdata()[mask].T, compression=\"gzip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = Parallel(n_jobs=-2, verbose=10)(delayed(slice_brain)(subject, img.path) for subject in subjects for img in layout.get(subject=subject))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# ISC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lang = \"EN\"\n",
-    "n_runs = 9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layout = BIDSLayout(\"data/li2022/derivatives\", validate=False, is_derivative=True)\n",
-    "subjects = layout.get_subjects()\n",
-    "subjects = [s for s in subjects if s.startswith(lang) and not \"ISC\" in s]\n",
-    "n_subjects = len(subjects)"
    ]
   },
   {
@@ -233,6 +252,81 @@
    "outputs": [],
    "source": [
     "plotting.view_connectome(adjacency_matrix=np.diag(df_display.zscore), node_coords=df_display[[\"x\", \"y\", \"z\"]], node_color=colors, edge_cmap=cmap, node_size=sizes, symmetric_cmap=False, title=f\"Correlation zscore from ISC on the {n_subjects} {lang} subjects, zscore FDR thresh {thresh:.3g}, 10% of the {len(df)} selected voxels are displayed\").save_as_html(\"figs/li2022_isc.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SRM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read(subject, run, path):\n",
+    "    img = nib.load(path).get_fdata()\n",
+    "    img = img.reshape(-1, img.shape[-1])\n",
+    "    img = StandardScaler(copy=False).fit_transform(img.T).T\n",
+    "    return subject, run, img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = Parallel(n_jobs=-2, verbose=2)(delayed(read)(subject, run, path) for subject in subjects[:2] for run, path in enumerate(layout.get(subject=subject)[:2]))\n",
+    "res = {(subject, run): img for subject, run, img in res}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs = [[res[(subject, run)] for run in range(2)] for subject in subjects[:2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastsrm.identifiable_srm import IdentifiableFastSRM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "srm = IdentifiableFastSRM(n_components=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = srm.fit_transform(imgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = srm.basis_list[0]"
    ]
   }
  ],
