Preprocessing and refactor subjects specification

--- a/temporary_processing.ipynb
+++ b/temporary_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -22,7 +22,7 @@
     "from scipy.stats import ttest_1samp, norm\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
-    "from nilearn import plotting, image\n",
+    "import nilearn\n",
     "import os, h5py\n",
     "from joblib import Parallel, delayed\n",
     "import re\n",
@@ -73,6 +73,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/louis/Decoding/data/li2022/all_EN/sub-EN057\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Path('/home/louis/Decoding/data/li2022/all_EN/sub-EN057'))#.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_dir = Path(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_symlink(input, target):\n",
+    "    input.symlink_to(target.relative_to(input.parent, walk_up=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = Path(\"data/ridge.py\")\n",
+    "target = Path(\"src/ridge.py\")\n",
+    "create_symlink(input, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -85,7 +132,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keep only brain"
+    "# Resample and keep only brain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "glob(r\"data/li2022/derivatives/sub-EN[0-9]{2,}\")"
    ]
   },
   {
@@ -94,8 +162,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sorted([Path(f.path) for f in layout.get(subject=subjects)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lpp_img = nib.load(layout.get()[0])\n",
+    "acquisition_affine = lpp_img.affine.copy()\n",
+    "acquisition_affine[np.arange(3), np.arange(3)] = 3.75\n",
+    "lpp_img = nilearn.image.resample_img(lpp_img, target_affine=acquisition_affine)\n",
     "mask = nib.load(\"data/li2022/colin27_t1_tal_lin_mask.nii\")\n",
-    "mask = image.resample_to_img(mask, nib.load(layout.get()[0]), interpolation=\"nearest\").get_fdata().astype(bool)\n",
+    "mask = nilearn.image.resample_to_img(mask, lpp_img, interpolation=\"nearest\").get_fdata().astype(bool)\n",
     "mask = np.where(mask)"
    ]
   },
@@ -105,14 +186,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def slice_brain(subject, path):\n",
+    "def resample_and_slice_brain(subject, path):\n",
     "    new_path = path.replace(\"sub-\" + subject, \"sub-\" + subject + \"brain\")\n",
     "    new_path = Path(new_path.replace(\".nii.gz\", \".hf5\"))\n",
     "    if new_path.exists():\n",
     "        return\n",
     "    new_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "    with h5py.File(new_path, \"w\") as f:\n",
-    "        f.create_dataset(\"data\", data=nib.load(path).get_fdata()[mask].T, compression=\"gzip\")"
+    "        img = nilearn.image.resample_img(nib.load(path), target_affine=acquisition_affine)\n",
+    "        f.create_dataset(\"data\", data=img.get_fdata()[mask].T, compression=\"gzip\")"
    ]
   },
   {
@@ -121,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = Parallel(n_jobs=-2, verbose=10)(delayed(slice_brain)(subject, img.path) for subject in subjects for img in layout.get(subject=subject))"
+    "_ = Parallel(n_jobs=-2, verbose=10)(delayed(resample_and_slice_brain)(subject, img.path) for subject in subjects for img in layout.get(subject=subject))"
    ]
   },
   {
@@ -129,6 +211,20 @@
    "metadata": {},
    "source": [
     "# ISC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lang = \"EN\"\n",
+    "n_runs = 3\n",
+    "layout = BIDSLayout(\"data/li2022/derivatives\", validate=False, is_derivative=True)\n",
+    "subjects = layout.get_subjects()\n",
+    "subjects = [s for s in subjects if re.match(lang + r\"\\d+brain$\", s)][:2]\n",
+    "n_subjects = len(subjects)"
    ]
   },
   {
@@ -147,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_imgs = sorted([f.path for f in layout.get(subject=\"meanEN\")])\n",
+    "mean_imgs = sorted([f.path for f in layout.get(subject=\"meanENbrain\")])\n",
     "mean_imgs = sorted(process_map(read, mean_imgs[:3]))\n",
     "mean_imgs = np.concatenate([m[1] for m in mean_imgs], axis=-1) * n_subjects"
    ]
@@ -326,6 +422,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "X[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "W = srm.basis_list[0]"
    ]
   }
@@ -346,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
