--- a/decode.ipynb
+++ b/decode.ipynb
@@ -2,34 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
+    "import torch, re, json\n",
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "from src.main import main\n",
+    "from src.prepare_latents import compute_chunks\n",
+    "from src.utils import device\n",
     "from transformers import pipeline\n",
-    "from sentence_transformers import SentenceTransformer"
+    "from sentence_transformers import SentenceTransformer\n",
+    "from IPython.display import clear_output\n",
+    "import torchmetrics.functional as tmf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = [\"li2022_EN_SS_trimmed_mean\"]"
+    "from semantic_decoding.decoding.GPT import GPT\n",
+    "from semantic_decoding.decoding.LanguageModel import LanguageModel\n",
+    "from semantic_decoding.decoding.Decoder import Decoder\n",
+    "\n",
+    "data_lm = Path(\"data/data_lm\")\n",
+    "with open(data_lm / \"perceived\" / \"vocab.json\", \"r\") as f:\n",
+    "    gpt_vocab = json.load(f)\n",
+    "with open(data_lm / \"decoder_vocab.json\", \"r\") as f:\n",
+    "    decoder_vocab = json.load(f)\n",
+    "gpt = GPT(path = data_lm / \"perceived\" / \"model\", vocab=gpt_vocab, device=device)\n",
+    "lm = LanguageModel(gpt, decoder_vocab, nuc_mass=0.9, nuc_ratio=0.1)\n",
+    "decoder = Decoder([1, 2, 3], 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(['i', 'we', 'she', 'he', 'they', 'it'],\n",
+       "  array([-1.79175947, -1.79175947, -1.79175947, -1.79175947, -1.79175947,\n",
+       "         -1.79175947]))]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lm.beam_propose(decoder.beam, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = [\"li2022_EN_SS_trimmed_mean\"]\n",
+    "subjects = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = [\"lebel2023\"]\n",
+    "subjects = {\"lebel2023\": [\"UTS03\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
     "    \"datasets\": datasets,\n",
+    "    \"subjects\": subjects,\n",
     "    \"model\": \"bert-base-uncased\",\n",
     "    \"decoder\": \"brain_decoder\",\n",
     "    \"loss\": \"mixco\",\n",
@@ -44,60 +103,17 @@
     "    \"lr\": 1e-4,\n",
     "    \"weight_decay\": 1e-6,\n",
     "    \"batch_size\": 1,\n",
-    "    \"temperature\": 0.05\n",
+    "    \"temperature\": 0.05,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpt2 = pipeline(\"text-generation\", model=\"gpt2\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Max number of tokens in a chunk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clone_config = config.copy()\n",
-    "clone_config[\"context_length\"] = 0\n",
-    "df_train, df_valid, df_test = main(return_data=True, caching=False, **clone_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_tokens = []\n",
-    "for df in [df_train, df_valid, df_test]:\n",
-    "    for _, row in df.drop_duplicates([\"dataset\", \"run\"]).iterrows():\n",
-    "        for chunk in row.text:\n",
-    "            num_tokens.append([row.dataset, row.run, len(gpt2.tokenizer.encode(chunk))])\n",
-    "num_tokens = pd.DataFrame(num_tokens, columns=[\"dataset\", \"run\", \"num_tokens\"])\n",
-    "num_tokens = num_tokens.sort_values(\"run\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import plotly.express as px\n",
-    "px.histogram(num_tokens, x=\"num_tokens\", facet_col=\"run\", marginal=\"box\", nbins=50)"
+    "gpt2 = pipeline(\"text-generation\", model=\"gpt2\", device=device)"
    ]
   },
   {
@@ -109,12 +125,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train, df_valid, df_test = main(return_data=True, caching=False, **config)\n",
-    "_, decoder = main(**config)"
+    "_, decoder = main(**config)\n",
+    "decoder = decoder.to(device)\n",
+    "clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks = []\n",
+    "df = pd.concat([df_train[[\"dataset\", \"run\"]], df_valid[[\"dataset\", \"run\"]], df_test[[\"dataset\", \"run\"]]]).drop_duplicates()\n",
+    "for _, row in df.iterrows():\n",
+    "    if row.dataset == \"lebel2023\":\n",
+    "        textgrid_path = f\"data/lebel2023/derivative/TextGrids/{row.run}.TextGrid\"\n",
+    "    chunks.append([row.dataset, row.run, compute_chunks(textgrid_path, 2, 0)])\n",
+    "chunks = pd.DataFrame(chunks, columns=[\"dataset\", \"run\", \"text\"])\n",
+    "chunks[\"num_tokens\"] = chunks.text.apply(lambda x: len(gpt2.tokenizer.encode(chunk))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df_train.drop(columns=[\"text\"]).merge(chunks)\n",
+    "df_valid = df_valid.drop(columns=[\"text\"]).merge(chunks)\n",
+    "df_test = df_test.drop(columns=[\"text\"]).merge(chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_tokens = []\n",
+    "for text in chunks.text:\n",
+    "    for chunk in text:\n",
+    "        num_tokens.append(len(gpt2.tokenizer.encode(chunk)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "px.histogram(num_tokens, nbins=50, marginal=\"box\", title=\"Number of tokens per chunk\")"
    ]
   },
   {
@@ -130,9 +206,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = SentenceTransformer(config[\"model\"], device=device)\n",
+    "clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "_, row = next(iter(df_train.iterrows()))\n",
     "with torch.no_grad():\n",
-    "    predicted_latent = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X))"
+    "    predicted_latents = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X.to(device)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bert generation"
    ]
   },
   {
@@ -141,22 +234,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"Once upon a time\"\n",
-    "num_sentences = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gpt2(\n",
-    "    prompt,\n",
-    "    max_new_tokens=12,\n",
-    "    num_return_sequences=num_sentences,\n",
-    "    pad_token_id=50256,\n",
-    ")"
+    "prompt = \"\"\n",
+    "generated_chunks_lengths = []\n",
+    "current_crop_length = 0\n",
+    "torch.cuda.empty_cache()\n",
+    "for i in range(len(row.text))[:10]:\n",
+    "    generated_sentences = gpt2(\n",
+    "        prompt,\n",
+    "        max_new_tokens=8,\n",
+    "        num_return_sequences=1000,\n",
+    "        pad_token_id=50256,\n",
+    "        top_k=0,\n",
+    "        top_p=0.6,\n",
+    "        temperature=1.8,\n",
+    "        repetition_penalty=1.8,\n",
+    "    )\n",
+    "    generated_sentences = [re.sub(r'\\n+', ' ', s[\"generated_text\"]) for s in generated_sentences]\n",
+    "    if i > config[\"context_length\"]:\n",
+    "        current_crop_length = generated_chunks_lengths[i - config[\"context_length\"] - 1]\n",
+    "    generated_sentences_cropped = [s[current_crop_length:] for s in generated_sentences]\n",
+    "    embeddings = model.encode(generated_sentences_cropped, convert_to_numpy=False, convert_to_tensor=True)\n",
+    "    best_sentence_index = tmf.pairwise_cosine_similarity(predicted_latents[[i]], embeddings).argmax()\n",
+    "    best_sentence = generated_sentences[best_sentence_index]\n",
+    "    generated_chunks_lengths.append(len(best_sentence) - len(prompt))\n",
+    "    print(\"Generated: \", best_sentence[len(prompt):])\n",
+    "    print(\"Correct: \", row.text[i])\n",
+    "    print(i, current_crop_length)\n",
+    "    prompt = best_sentence"
    ]
   }
  ],
