--- a/decode.ipynb
+++ b/decode.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch, re, json\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from pathlib import Path\n",
+    "from tqdm.auto import tqdm\n",
     "from src.main import main\n",
     "from src.prepare_latents import compute_chunks\n",
-    "from src.utils import device\n",
+    "from src.utils import device, progress\n",
     "from transformers import pipeline\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from IPython.display import clear_output\n",
@@ -20,49 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from semantic_decoding.decoding.GPT import GPT\n",
-    "from semantic_decoding.decoding.LanguageModel import LanguageModel\n",
-    "from semantic_decoding.decoding.Decoder import Decoder\n",
-    "\n",
-    "data_lm = Path(\"data/data_lm\")\n",
-    "with open(data_lm / \"perceived\" / \"vocab.json\", \"r\") as f:\n",
-    "    gpt_vocab = json.load(f)\n",
-    "with open(data_lm / \"decoder_vocab.json\", \"r\") as f:\n",
-    "    decoder_vocab = json.load(f)\n",
-    "gpt = GPT(path = data_lm / \"perceived\" / \"model\", vocab=gpt_vocab, device=device)\n",
-    "lm = LanguageModel(gpt, decoder_vocab, nuc_mass=0.9, nuc_ratio=0.1)\n",
-    "decoder = Decoder([1, 2, 3], 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(['i', 'we', 'she', 'he', 'they', 'it'],\n",
-       "  array([-1.79175947, -1.79175947, -1.79175947, -1.79175947, -1.79175947,\n",
-       "         -1.79175947]))]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lm.beam_propose(decoder.beam, 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,23 +101,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chunks = []\n",
+    "df_chunks = []\n",
     "df = pd.concat([df_train[[\"dataset\", \"run\"]], df_valid[[\"dataset\", \"run\"]], df_test[[\"dataset\", \"run\"]]]).drop_duplicates()\n",
-    "for _, row in df.iterrows():\n",
+    "for _, row in tqdm(df.iterrows(), total=len(df)):\n",
     "    if row.dataset == \"lebel2023\":\n",
     "        textgrid_path = f\"data/lebel2023/derivative/TextGrids/{row.run}.TextGrid\"\n",
-    "    chunks.append([row.dataset, row.run, compute_chunks(textgrid_path, 2, 0)])\n",
-    "chunks = pd.DataFrame(chunks, columns=[\"dataset\", \"run\", \"text\"])\n",
-    "chunks[\"num_tokens\"] = chunks.text.apply(lambda x: len(gpt2.tokenizer.encode(chunk))"
+    "    chunks = compute_chunks(textgrid_path, 2, 0)\n",
+    "    num_words = [len(chunk.split(\" \")) for chunk in chunks]\n",
+    "    df_chunks.append([row.dataset, row.run, chunks, num_words])\n",
+    "df_chunks = pd.DataFrame(df_chunks, columns=[\"dataset\", \"run\", \"text\", \"num_words\"])"
    ]
   },
   {
@@ -166,9 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = df_train.drop(columns=[\"text\"]).merge(chunks)\n",
-    "df_valid = df_valid.drop(columns=[\"text\"]).merge(chunks)\n",
-    "df_test = df_test.drop(columns=[\"text\"]).merge(chunks)"
+    "df_train = df_train.drop(columns=[\"text\"]).merge(df_chunks)\n",
+    "df_valid = df_valid.drop(columns=[\"text\"]).merge(df_chunks)\n",
+    "df_test = df_test.drop(columns=[\"text\"]).merge(df_chunks)"
    ]
   },
   {
@@ -177,10 +129,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_tokens = []\n",
-    "for text in chunks.text:\n",
-    "    for chunk in text:\n",
-    "        num_tokens.append(len(gpt2.tokenizer.encode(chunk)))"
+    "row = df_train[df_train.run == \"wheretheressmoke\"].iloc[0]\n",
+    "with torch.no_grad():\n",
+    "    predicted_latents = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X.to(device)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decode Tang"
    ]
   },
   {
@@ -189,8 +147,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "px.histogram(num_tokens, nbins=50, marginal=\"box\", title=\"Number of tokens per chunk\")"
+    "from semantic_decoding.decoding.GPT import GPT\n",
+    "from semantic_decoding.decoding.LanguageModel import LanguageModel\n",
+    "from semantic_decoding.decoding.Decoder import Decoder, Hypothesis\n",
+    "\n",
+    "data_lm = Path(\"data/data_lm\")\n",
+    "with open(data_lm / \"perceived\" / \"vocab.json\", \"r\") as f:\n",
+    "    gpt_vocab = json.load(f)\n",
+    "with open(data_lm / \"decoder_vocab.json\", \"r\") as f:\n",
+    "    decoder_vocab = json.load(f)\n",
+    "gpt = GPT(path = data_lm / \"perceived\" / \"model\", vocab=gpt_vocab, device=device)\n",
+    "lm = LanguageModel(gpt, decoder_vocab, nuc_mass=0.9, nuc_ratio=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpt_decoder = Decoder(word_times=range(sum(row.num_tokens)), beam_width=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SentenceTransformer(config[\"model\"], device=device)\n",
+    "clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tqdm(total=sum(row.num_words)) as pbar:\n",
+    "    for i, num_words in enumerate(row.num_words):\n",
+    "        if i > 0:\n",
+    "            print(\"\\033[F\\033[F\", end='')\n",
+    "        pbar.set_description(f\"Chunk {i+1} / {len(row.num_words)}\")\n",
+    "        context_window = sum(row.num_words[i-config[\"context_length\"]:i])\n",
+    "        for _ in range(num_words):\n",
+    "            beam_nucs = lm.beam_propose(gpt_decoder.beam, context_window)\n",
+    "            for c, (hyp, nextensions) in enumerate(gpt_decoder.get_hypotheses()):\n",
+    "                nuc, logprobs = beam_nucs[c]\n",
+    "                if len(nuc) < 1: continue\n",
+    "                extend_words = [' '.join(hyp.words[-context_window:] + [x]) for x in nuc]\n",
+    "                embs = model.encode(extend_words, convert_to_numpy=False, convert_to_tensor=True)\n",
+    "                scores = tmf.pairwise_cosine_similarity(predicted_latents[[i]], embs)[0].cpu()\n",
+    "                embs = [None] * len(embs)\n",
+    "                local_extensions = [Hypothesis(parent = hyp, extension = x) for x in zip(nuc, scores, embs)]\n",
+    "                gpt_decoder.add_extensions(local_extensions, scores, nextensions)\n",
+    "            gpt_decoder.extend(verbose = False)\n",
+    "            context_window += 1\n",
+    "            pbar.update(1)\n",
+    "        best_hyp = np.argmax([sum(hyp.logprobs) for hyp in gpt_decoder.beam])\n",
+    "        print(\"Correct chunk:\", row.text[i])\n",
+    "        print(\"Best hypothesis:\", \" \".join(gpt_decoder.beam[best_hyp].words[-num_words:]))"
    ]
   },
   {
@@ -280,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
